--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Abdessamad Touzani
-description: Futur Data Scientist
+description: Junior Data Analyst | Python/Flask | JavaScript
 theme: minima
